@@ -4,6 +4,7 @@ Version 6.8.3 - not yet released
 * Waypoints
   - use correct "comment" field for OziExplorer files
   - relax file format detection for OziExplorer files
+* fix crash in XML parser
 
 Version 6.8.2 - 2015/09/19
 * Rubik R-26S polar
